# Xelma-Blockchain

./: .gitignore  CHANGELOG.md  COMPATIBILITY_POLICY.md  CONTRIBUTING.md  Cargo.toml  PROTOCOL_SPEC.md  README.md  SECURITY_REVIEW.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/scripts/: generate-changelog.sh
.github/workflows/: changelog.yml  ci.yml
bindings/: README.md  package-lock.json  package.json  vitest.config.ts
bindings/src/: index.ts
bindings/tests/: contract-error-parity.test.js  wasm-parity.test.js
contracts/src/: contract.rs  errors.rs  lib.rs  types.rs
contracts/src/tests/: archive_retention.rs  betting.rs  cei_ordering.rs  chaos_recovery.rs  commit_reveal_e2e.rs  config_helpers.rs  config_timelock.rs  cost_benchmarks.rs  edge_cases.rs  event_coverage.rs  guard_tests.rs  initialization.rs  invariant_harness.rs  lifecycle.rs  migration_versioning.rs  mod.rs  mode_tests.rs  overflow_tests.rs  pause.rs  property_invariants.rs  reference_model.rs  resolution.rs  security.rs  storage_benchmarks.rs  ttl_tests.rs  windows.rs
docs/: EVENT_SCHEMA.md  RELEASE.md  WALLET_ERROR_GUIDE.md
scripts/: add_spdx_headers.sh  check-doc-drift.js  update_snapshots.sh
