[workspace]
resolver = "2"
members = [
    "contracts",
]

[workspace.dependencies]
soroban-sdk = "23.0.1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
[dev-dependencies]
proptest = "1.0"
rand = "0.8"
